完成配置注释第一遍

--- a/redis.conf
+++ b/redis.conf
@@ -1030,6 +1030,7 @@ lua-time-limit 5000
 # are no longer covered) all the cluster becomes, eventually, unavailable.
 # It automatically returns available as soon as all the slots are covered again.
 #
+# 但是，有时您希望正在工作的集群子集继续接受对仍然覆盖的键空间部分的查询。为此，只需将cluster-require-full-coverage选项设置为no
 # However sometimes you want the subset of the cluster which is working,
 # to continue to accept queries for the part of the key space that is still
 # covered. In order to do so, just set the cluster-require-full-coverage
@@ -1076,18 +1077,24 @@ slowlog-max-len 128
 
 ################################ LATENCY MONITOR ##############################
 
+# Redis延迟监控子系统在运行时对不同的操作进行采样，以便收集与Redis实例可能的延迟来源相关的数据
 # The Redis latency monitoring subsystem samples different operations
 # at runtime in order to collect data related to possible sources of
 # latency of a Redis instance.
 #
+# 通过使用LATENCY命令，用户可以使用这些信息来打印图形和获取报告
 # Via the LATENCY command this information is available to the user that can
 # print graphs and obtain reports.
 #
+# 日志文件中指定的时间等于或大于毫秒数的操作，系统才会记录操作日志
+# 延迟监视器阈值配置指令。当其值设置为零时，将关闭延迟监视器。
 # The system only logs operations that were performed in a time equal or
 # greater than the amount of milliseconds specified via the
 # latency-monitor-threshold configuration directive. When its value is set
 # to zero, the latency monitor is turned off.
 #
+# 默认情况下，延迟监视是禁用的，因为如果没有延迟问题，通常不需要它，并且收集数据会对性能产生影响，虽然影响很小，但可以在大负载下进行测量。
+# 如果需要，可以在运行时使用命令“CONFIG SET Latency -monitor-threshold <milliseconds>”轻松启用延迟监视
 # By default latency monitoring is disabled since it is mostly not needed
 # if you don't have latency issues, and collecting data has a performance
 # impact, that while very small, can be measured under big load. Latency
@@ -1097,9 +1104,11 @@ latency-monitor-threshold 0
 
 ############################# EVENT NOTIFICATION ##############################
 
+# Redis可以通知Pub/Sub客户端key空间中发生的事件。该特性的文档位于http://redis.io/topics/notifications
 # Redis can notify Pub/Sub clients about events happening in the key space.
 # This feature is documented at http://redis.io/topics/notifications
 #
+# 例如，如果启用了keyspace事件通知，并且客户机对存储在Database 0中的键“foo”执行DEL操作，则将通过Pub/Sub发布两条消息
 # For instance if keyspace events notification is enabled, and a client
 # performs a DEL operation on key "foo" stored in the Database 0, two
 # messages will be published via Pub/Sub:
@@ -1107,6 +1116,7 @@ latency-monitor-threshold 0
 # PUBLISH __keyspace@0__:foo del
 # PUBLISH __keyevent@0__:del foo
 #
+# 可以在一组类中选择Redis将通知的事件。每个类都由单个字符标识
 # It is possible to select the events that Redis will notify among a set
 # of classes. Every class is identified by a single character:
 #
@@ -1122,20 +1132,25 @@ latency-monitor-threshold 0
 #  e     Evicted events (events generated when a key is evicted for maxmemory)
 #  A     Alias for g$lshzxe, so that the "AKE" string means all the events.
 #
+# “notify-keyspace-events”的参数是一个由零个或多个字符组成的字符串。空字符串表示禁用通知
 #  The "notify-keyspace-events" takes as argument a string that is composed
 #  of zero or multiple characters. The empty string means that notifications
 #  are disabled.
 #
+#  若要从事件名称的角度启用列表事件和一般事件，请使用
 #  Example: to enable list and generic events, from the point of view of the
 #           event name, use:
 #
 #  notify-keyspace-events Elg
 #
+#  订阅通道名称__keyevent@0__:expired  获取过期密钥流
 #  Example 2: to get the stream of the expired keys subscribing to channel
 #             name __keyevent@0__:expired use:
 #
 #  notify-keyspace-events Ex
 #
+# 默认情况下，所有通知都是禁用的，因为大多数用户不需要这个功能，
+# 而且这个功能有一些开销。请注意，如果您没有指定K或E中的至少一个，则不会交付任何事件
 #  By default all notifications are disabled because most users don't need
 #  this feature and the feature has some overhead. Note that if you don't
 #  specify at least one of K or E, no events will be delivered.
@@ -1194,6 +1209,9 @@ list-max-ziplist-size -2
 # etc.
 list-compress-depth 0
 
+# 只有在一种情况下，集合具有特殊的编码：
+# 当集合恰好由64位带符号整数范围内以10为基数的整数组成时。
+#下面的配置设置设置了集合大小的限制，以便使用这种特殊的内存保存编码
 # Sets have a special encoding in just one case: when a set is composed
 # of just strings that happen to be integers in radix 10 in the range
 # of 64 bit signed integers.
@@ -1201,12 +1219,17 @@ list-compress-depth 0
 # set in order to use this special memory saving encoding.
 set-max-intset-entries 512
 
+# 与散列和列表类似，排序集也经过特殊编码，以节省大量空间。此编码仅在排序集的长度和元素低于以下限制时使用
 # Similarly to hashes and lists, sorted sets are also specially encoded in
 # order to save a lot of space. This encoding is only used when the length and
 # elements of a sorted set are below the following limits:
 zset-max-ziplist-entries 128
 zset-max-ziplist-value 64
 
+
+# HyperLogLog稀疏表示字节限制。该限制包括16字节的报头。当使用稀疏表示的HyperLogLog超过此限制时，它将被转换为密集表示。大于16000的值是完全无用的，因为在这个点上，密集的表示更有效地利用内存。
+#  建议的值为~ 3000，以便在不降低太多PFADD速度的情况下获得空间高效编码的好处，在稀疏编码下，PFADD的速度为0 (N)
+#  当不考虑CPU，但考虑空间，并且数据集由许多基数在0 - 15000范围内的hyperloglog组成时，该值可以提高到~ 10000
 # HyperLogLog sparse representation bytes limit. The limit includes the
 # 16 bytes header. When an HyperLogLog using the sparse representation crosses
 # this limit, it is converted into the dense representation.
@@ -1221,6 +1244,10 @@ zset-max-ziplist-value 64
 # composed of many HyperLogLogs with cardinality in the 0 - 15000 range.
 hll-sparse-max-bytes 3000
 
+# 主动重哈希每100毫秒使用1毫秒的CPU时间，以帮助重哈希主Redis哈希表（映射顶级键到值的表）。
+# Redis使用的哈希表实现（参见dict.c）执行惰性重哈希：
+# 您运行到重哈希的哈希表中的操作越多，执行的重哈希“步骤”就越多，
+# 因此，如果服务器空闲，重哈希永远不会完成，并且哈希表会使用更多内存
 # Active rehashing uses 1 millisecond every 100 milliseconds of CPU time in
 # order to help rehashing the main Redis hash table (the one mapping top-level
 # keys to values). The hash table implementation Redis uses (see dict.c)
@@ -1241,35 +1268,46 @@ hll-sparse-max-bytes 3000
 # want to free memory asap when possible.
 activerehashing yes
 
+# 客户端输出缓冲区限制可用于强制断开由于某些原因而没有足够快地从服务器读取数据的客户端
+# （常见的原因是Pub/Sub客户端不能像发布者生成消息那样快地使用消息）。
 # The client output buffer limits can be used to force disconnection of clients
 # that are not reading data from the server fast enough for some reason (a
 # common reason is that a Pub/Sub client can't consume messages as fast as the
 # publisher can produce them).
 #
+# 对于三种不同类别的客户，可以设置不同的限制
 # The limit can be set differently for the three different classes of clients:
 #
-# normal -> normal clients including MONITOR clients
-# slave  -> slave clients
-# pubsub -> clients subscribed to at least one pubsub channel or pattern
+# normal -> normal clients including MONITOR clients 正常客户端包括MONITOR客户端
+# slave  -> slave clients 从服务客户端
+# pubsub -> clients subscribed to at least one pubsub channel or pattern 至少订阅一个频道的客户端
 #
+# 每个client-output-buffer-limit指令的语法如下
 # The syntax of every client-output-buffer-limit directive is the following:
 #
 # client-output-buffer-limit <class> <hard limit> <soft limit> <soft seconds>
 #
+# 一旦达到硬限制，或者达到软限制并在指定的秒数（连续）内保持达到，客户机将立即断开连接。
 # A client is immediately disconnected once the hard limit is reached, or if
 # the soft limit is reached and remains reached for the specified number of
 # seconds (continuously).
+# 例如，如果硬限制是32兆字节，软限制是16兆字节/ 10秒，
+# 如果输出缓冲区的大小达到32兆字节，客户端将立即断开连接，但如果客户端达到16兆字节并连续超过限制10秒，也会断开连接
 # So for instance if the hard limit is 32 megabytes and the soft limit is
 # 16 megabytes / 10 seconds, the client will get disconnected immediately
 # if the size of the output buffers reach 32 megabytes, but will also get
 # disconnected if the client reaches 16 megabytes and continuously overcomes
 # the limit for 10 seconds.
 #
+# 默认情况下，普通客户端不受限制，因为它们不会在没有请求的情况下接收数据（以推送方式），
+# 而是在请求之后接收数据，因此只有异步客户端可能会创建请求数据比读取数据快的场景
 # By default normal clients are not limited because they don't receive data
 # without asking (in a push way), but just after a request, so only
 # asynchronous clients may create a scenario where data is requested faster
 # than it can read.
 #
+# 相反，对于公共订阅和从属客户端有一个默认限制，因为
+# 订阅者和从服务器以推送方式接收数据
 # Instead there is a default limit for pubsub and slave clients, since
 # subscribers and slaves receive data in a push fashion.
 #
@@ -1304,6 +1342,8 @@ client-output-buffer-limit pubsub 32mb 8mb 60
 # 100 only in environments where very low latency is required.
 hz 10
 
+# 当子节点重写AOF文件时，如果启用了以下选项，则文件将每生成32mb的数据进行f同步。
+# 这对于以增量方式将文件提交到磁盘并避免大的延迟峰值非常有用
 # When a child rewrites the AOF file, if the following option is enabled
 # the file will be fsync-ed every 32 MB of data generated. This is useful
 # in order to commit the file to the disk more incrementally and avoid
