--- a/redis.conf
+++ b/redis.conf
@@ -59,6 +59,7 @@
 #
 # bind 192.168.1.100 10.0.0.1
 # bind 127.0.0.1 ::1
+# 按照源码来看，如果多加行，那么后面一行会把前面一行替代
 #
 # 如果运行Redis的计算机直接暴露在绑定到所有接口是危险的，并且会将实例暴露给互联网上的每个人。
 #因此，默认情况下，我们取消注释下面的bind指令，
